style: fix game over message spacing

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -69,6 +69,7 @@ h1 {
 }
 
 #game-over-message {
+  width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -77,6 +78,7 @@ h1 {
   font-size: 4rem;
   text-shadow: 2px 0 0 #000, 0 2px 0 #000, -2px 0 0 #000, 0 -2px 0 #000;
   color: rgb(216, 216, 216);
+  text-align: center;
 }
 
 @keyframes shimmer {
